[gd_scene load_steps=5 format=3 uid="uid://c02aqht3thrjb"]

[ext_resource type="Script" path="res://addons/gas/gas_richtextlabel.gd" id="1_ctlcc"]
[ext_resource type="Script" path="res://example_scenes/input_delay.gd" id="1_eakl7"]
[ext_resource type="FontFile" uid="uid://dqgaor6ji1vft" path="res://font/liberation-fonts-ttf-2.00.1/LiberationMono-Regular.ttf" id="2_ui2qt"]
[ext_resource type="Script" path="res://addons/gas/gas_scroll_container.gd" id="4_r2kge"]

[node name="InputDelay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eakl7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AccessibleRichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/mono_font = ExtResource("2_ui2qt")
bbcode_enabled = true
text = "You can set the [code]GASConfig.input_cooldown_enabled[/code] and [code]GASConfig.input_cooldown_length[/code] (defaults to [code]0.5[/code]) properties to prevent accidental mispresses of the same input/action. Instead of using the standard [code]InputEvent.is_action_pressed[/code] method in [code]_input[/code]/[code]_unhandled_input[/code] and the [code]Input.is_action_just_pressed[/code] method in [code]_process[/code], you can use the [code]GASInput.is_event_action_just_pressed[/code] and  [code]GASInput.is_action_just_pressed[/code] methods respectively to ensure the input cooldown is taken into account. You can use the arrow keys on your keyboard or the d-pad on your gamepad to experiment with this on this page."
fit_content = true
script = ExtResource("1_ctlcc")
accessible_text = "You can set the [code]GASConfig.input_cooldown_enabled[/code] and [code]GASConfig.input_cooldown_length[/code] (defaults to [code]0.5[/code]) properties to prevent accidental mispresses of the same input/action. Instead of using the standard [code]InputEvent.is_action_pressed[/code] method in [code]_input[/code]/[code]_unhandled_input[/code] and the [code]Input.is_action_just_pressed[/code] method in [code]_process[/code], you can use the [code]GASInput.is_event_action_just_pressed[/code] and  [code]GASInput.is_action_just_pressed[/code] methods respectively to ensure the input cooldown is taken into account. You can use the arrow keys on your keyboard or the d-pad on your gamepad to experiment with this on this page."

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Enabled" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Enable Input Cooldown"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2
text = "Input Cooldown Length"

[node name="Value" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 2.0
step = 0.1
value = 0.5

[node name="AccessibleScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_r2kge")

[node name="Log" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/AccessibleScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
fit_content = true
script = ExtResource("1_ctlcc")

[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/Enabled" to="." method="_on_enabled_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer/Value" to="." method="_on_value_value_changed"]
